// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "filterByTimestamp": false,
  "isLowercase": false,
  "priceInversed": false,
  "quoteInversed": false,
  "separator": "separator",
  "supportWS": false,
  "tradesInterval": 1,
  "wsLink": "",
}
`;

exports[` 2`] = `
Object {
  "filterByTimestamp": false,
  "isLowercase": false,
  "priceInversed": false,
  "quoteInversed": false,
  "separator": "separator",
  "supportWS": false,
  "tradesInterval": 1,
  "wsLink": "",
}
`;

exports[` 3`] = `
Object {
  "filterByTimestamp": false,
  "isLowercase": false,
  "priceInversed": false,
  "quoteInversed": false,
  "separator": "separator",
  "supportWS": false,
  "tradesInterval": 1,
  "wsLink": "",
}
`;

exports[` 4`] = `
Object {
  "filterByTimestamp": false,
  "isLowercase": false,
  "priceInversed": false,
  "quoteInversed": false,
  "separator": "separator",
  "supportWS": false,
  "tradesInterval": 1,
  "wsLink": "",
}
`;

exports[`addTrades REST bitstamp - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades REST gdax - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades REST gemini - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades REST kraken - filterBy (id > ID_1)  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
]
`;

exports[`addTrades WS bitstamp  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    false,
  ],
]
`;

exports[`addTrades WS gemini  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    true,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    false,
  ],
]
`;

exports[`getSourcePairs bitstamp  1`] = `
Array [
  "quotetickerbaseticker",
]
`;

exports[`getSourcePairs gdax  1`] = `
Array [
  "quoteticker-baseticker",
]
`;

exports[`getSourcePairs gemini  1`] = `
Array [
  "quotetickerbaseticker",
]
`;

exports[`getSourcePairs kraken  1`] = `
Array [
  "QUOTETICKERBASETICKER",
]
`;
